<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title_market"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_market"
        style="@style/main_title" />


    <TextView
        android:id="@+id/tv_link_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tools_text_home" />

    <TextView
        android:id="@+id/tv_link_catalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tools_text_catalog" />

    <TextView
        android:id="@+id/tv_link_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tools_text_map" />

    <TextView
        android:id="@+id/tv_link_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tools_text_search" />

    <TextView
        android:id="@+id/tv_link_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/tools_text_account" />

</LinearLayout>